--- a/src/gcweb/serverTop.ejs
+++ b/src/gcweb/serverTop.ejs
@@ -6,7 +6,8 @@
         <div class="row">
             <div class="brand col-xs-8 col-sm-9 col-md-6">
                 <img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/sig-blk-en.svg" alt="">
-                <span class="wb-inv"> Government of Canada / Gouvernement du Canada</span></div>
+                <span class="wb-inv"> Government of Canada / Gouvernement du Canada</span>
+            </div>
         </div>
     </div>
 </header>
