Adding accessible labels

--- a/src/gcintranet/appTop.ejs
+++ b/src/gcintranet/appTop.ejs
@@ -220,9 +220,9 @@
         </div>
     </div>
     <%_ if (pr.menuLinks != null) { -%>
-        <nav role="navigation" id="wb-smapp" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+        <nav role="navigation" id="wb-smapp" aria-labelledby="mainNavMenu" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
             <div class="pnl-strt container nvbar">
-                <h2 class="wb-inv"><^- msg('Main navigation menu') ^></h2>
+                <h2 class="wb-inv" id="mainNavMenu"><^- msg('Main navigation menu') ^></h2>
                 <div class="row">
                     <ul class="list-inline menu" role="menubar">
                         <%_ for (var menuLinkIndex=0; menuLinkIndex<pr.menuLinks.length; menuLinkIndex++) {
