--- a/src/gcweb/appTop.ejs
+++ b/src/gcweb/appTop.ejs
@@ -174,7 +174,7 @@ dataLayer = [];
         </div>
 
         <%_ if (pr.menuLinks != null) { -%>
-            <nav id="wb-sm" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement" aria-labelledby="appNavMenu">
+            <nav id="wb-sm" aria-labelledby="appNavMenu" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement" aria-labelledby="appNavMenu">
                 <div class="pnl-strt container nvbar">
                     <h2 class="wb-inv" id="appNavMenu"><^- msg('Main navigation menu') ^></h2>
                     <div class="row">
