--- a/src/gcintranet/refTop.ejs
+++ b/src/gcintranet/refTop.ejs
@@ -32,7 +32,10 @@
 
 <!--[if gte IE 9 | !IE ]><!-->
 <link href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/css/theme.min.css">
+<%# Only output css links if no explicit cdts css was found on the page -%>
+<% if (typeof(document) == "undefined" || !document.head.querySelector('link[rel="stylesheet"][href*="/cdts-" i][href$="styles.css" i]')) { -%>
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/css/theme.min.css">
+<% } -%>
 <!--<![endif]-->
 <!--[if lt IE 9]>
 <link href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/favicon.ico" rel="shortcut icon">
@@ -41,10 +44,14 @@
 <script src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/js/ie8-wet-boew.min.js"></script>
 <![endif]-->
 <!--[if lte IE 9]><![endif]-->
-<link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/gctheme.css">
-<%_ if (pr.subTheme == 'esdc' || pr.subTheme == 'labour') { -%>
-    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/esdc.css">
-<%_ } else if (pr.subTheme == 'eccc') { -%>
-    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/eccc.css">
-<%_ } -%>
-<link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsfixes.css">
+<%# Only output css links if no explicit cdts css was found on the page -%>
+<%# TODO: Revise once we know about conditional css (maybe we can just refer to cdts-main.css and cdts-'theme'.css from here instead of duplicating? -%>
+<% if (typeof(document) == "undefined" || !document.head.querySelector('link[rel="stylesheet"][href*="/cdts-" i][href$="styles.css" i]')) { -%>
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/gctheme.css">
+    <%_ if (pr.subTheme == 'esdc' || pr.subTheme == 'labour') { -%>
+        <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/esdc.css">
+    <%_ } else if (pr.subTheme == 'eccc') { -%>
+        <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/eccc.css">
+    <%_ } -%>
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsfixes.css">
+<% } -%>
