--- a/src/gcweb/refTop.ejs
+++ b/src/gcweb/refTop.ejs
@@ -1,4 +1,4 @@
-<%# ** 
+<%# **
     * This is all of the references to be made before existing page content.
     * @param? webAnalytics Used to determine inclusion of current analytics code.
     * @param? isApplication Used to determine if this will use the application templates (true/false).
@@ -12,7 +12,7 @@
                 <%_ -%><%- pr.webAnalytics[0].custom -%><%_ -%>
             <%_ } else if (pr.webAnalytics[0].version == 1 || pr.webAnalytics[0].version == 2) { -%>
                 <%_ -%>caacec67651710193d2331efef325107c23a0145/satelliteLib-<%_ -%>
-                <%_ switch (pr.webAnalytics[0].version) { 
+                <%_ switch (pr.webAnalytics[0].version) {
                     case 1: -%>
                         <%_ -%>92fcbbc24eeebb654a3dfbe688ed2dfe10a53e24<%_ -%>
                 <%_ break;
@@ -32,11 +32,15 @@
 
 <!--[if gte IE 9 | !IE ]><!-->
 <link href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/css/theme.min.css">
-<link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsfixes.css">
-<% if (pr.isApplication == true) { %>
-<link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsapps.css">
-<% } %>
+<%# Only output css links if no explicit cdts css was found on the page -%>
+<%# TODO: Revise once we know about conditional css (maybe we can just refer to cdts-styles.css and cdts-app-styles.css from here instead of duplicating? -%>
+<% if (typeof(document) == "undefined" || !document.head.querySelector('link[rel="stylesheet"][href*="/cdts-" i][href$="styles.css" i]')) { -%>
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/css/theme.min.css">
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsfixes.css">
+    <%_ if (pr.isApplication == true) { -%>
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsapps.css">
+    <%_ } -%>
+<% } -%>
 <!--<![endif]-->
 <!--[if lt IE 9]>
 <link href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/favicon.ico" rel="shortcut icon">
