--- a/public/gcintranet/cdts-splash-styles.css
+++ b/public/gcintranet/cdts-splash-styles.css
@@ -1,3 +1,5 @@
 /*TODO: See if we could replace cdts-*.css with conditional CSS statements*/
 @import url("../wet-boew/css/theme.min.css");
+@import url("gctheme.css");
 @import url("cdtsfixes.css");
+@import url("../wet-boew/css/messages.min.css");
