--- a/src/gcweb/serverRefTop.ejs
+++ b/src/gcweb/serverRefTop.ejs
@@ -3,8 +3,11 @@
 -%>
 <!--[if gte IE 9 | !IE ]><!-->
 <link href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/css/theme.min.css">
-<link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsfixes.css">
+<%# Only output css links if no explicit cdts css was found on the page -%>
+<% if (typeof(document) == "undefined" || !document.head.querySelector('link[rel="stylesheet"][href*="/cdts-" i][href$="styles.css" i]')) { -%>
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/css/theme.min.css">
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsfixes.css">
+<% } -%>
 <!--<![endif]-->
 <!--[if lt IE 9]>
 <link href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/favicon.ico" rel="shortcut icon">
