--- a/src/gcintranet/refTop.ejs
+++ b/src/gcintranet/refTop.ejs
@@ -33,7 +33,7 @@
 <!--[if gte IE 9 | !IE ]><!-->
 <link href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
 <%# Only output css links if no explicit cdts css was found on the page -%>
-<% if (typeof(document) == "undefined" || !document.head.querySelector('link[rel="stylesheet"][href*="/cdts-" i][href$="styles.css" i]')) { -%>
+<% if (typeof(document) === "undefined" || !document.head.querySelector('link[rel="stylesheet"][href*="/cdts-"][href$="styles.css"]')) { -%>
     <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/css/theme.min.css">
 <% } -%>
 <!--<![endif]-->
@@ -46,7 +46,7 @@
 <!--[if lte IE 9]><![endif]-->
 <%# Only output css links if no explicit cdts css was found on the page -%>
 <%# TODO: Revise once we know about conditional css (maybe we can just refer to cdts-main.css and cdts-'theme'.css from here instead of duplicating? -%>
-<% if (typeof(document) == "undefined" || !document.head.querySelector('link[rel="stylesheet"][href*="/cdts-" i][href$="styles.css" i]')) { -%>
+<% if (typeof(document) === "undefined" || !document.head.querySelector('link[rel="stylesheet"][href*="/cdts-"][href$="styles.css"]')) { -%>
     <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/gctheme.css">
     <%_ if (pr.subTheme == 'esdc' || pr.subTheme == 'labour') { -%>
         <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/esdc.css">
