Removing inline script elements and other changes to support Content-Security-Policy

--- a/public/gcintranet/cdtsfixes.css
+++ b/public/gcintranet/cdtsfixes.css
@@ -6,6 +6,9 @@
 /********** Date modified/Screen identifier/Version **********/
 /* Pour ajuster le splashpage */
 
+.cdts-hidden {
+    display: none;
+}
 .cdts-splash {
 	font-size: .5em;
 }
@@ -13,19 +16,19 @@
 @media (min-width: 768) {
 	.cdts-splash {
 		font-size: .6em;
-	} 
+	}
 }
 
 @media (min-width: 992) {
 	.cdts-splash {
 		font-size: .7em;
-	} 
+	}
 }
 
 @media (min-width: 1200px) {
 	.cdts-splash {
 		font-size: .8em;
-	} 
+	}
 }
 
 /********** AJOUTÉ PAR Stéphane Ducharme LE 2019/02/14 **********/
