--- a/src/gcintranet/top.ejs
+++ b/src/gcintranet/top.ejs
@@ -26,15 +26,7 @@ if (pr.subTheme === 'eccc') {
         "action" : "<^- msg('https://intranet.ec.gc.ca/default.asp?lang=en&n=F7CAD023-1') ^>",
         "placeholder" : "<^- msg('Search ECCC intranet') ^>",
         "method" : "get",
-        "hiddenInput" : [
-            { "name" : "lang", "id" : "lang", "value" : "<^- msg('en') ^>"},
-            { "name" : "n", "id" : "n", "value" : "F7CAD023-1"},
-            { "name" : "xsl", "id" : "xsl", "value" : "idolsearchguirenderer,result"},
-            { "name" : "xml", "id" : "xml", "value" : "F7CAD023-E332-4264-9BE3-0D07260E64CC"},
-            { "name" : "searchoffset", "id" : "searchoffset", "value" : "1"},
-            { "name" : "searchfunction", "id" : "searchfunction", "value" : "basicsearch"},
-            { "name" : "language", "id" : "language", "value" : "<^- msg('en') ^>"}
-        ]
+        "hiddenInput" : [{ "name" : "lang", "id" : "lang", "value" : "<^- msg('en') ^>"}, { "name" : "n", "id" : "n", "value" : "F7CAD023-1"}, { "name" : "xsl", "id" : "xsl", "value" : "idolsearchguirenderer,result"}, { "name" : "xml", "id" : "xml", "value" : "F7CAD023-E332-4264-9BE3-0D07260E64CC"}, { "name" : "searchoffset", "id" : "searchoffset", "value" : "1"}, { "name" : "searchfunction", "id" : "searchfunction", "value" : "basicsearch"}, { "name" : "language", "id" : "language", "value" : "<^- msg('en') ^>"}]
     }]
 } else if (pr.subTheme === 'esdc') {
     pr.GCToolsModal = true;
@@ -48,11 +40,7 @@ if (pr.subTheme === 'eccc') {
         "action" : "https://esdc.prv/cgi-bin/rhdcc-hrsdc/recherche-search.aspx",
         "placeholder" : "<^- msg('Search the Intranet') ^>",
         "method" : "get",
-        "hiddenInput" : [
-            { "name" : "k", "value" : "<^- msg('en') ^>"},
-            { "name" : "l", "value" : "<^- msg('eng') ^>"},
-            { "name" : "chk2", "value" : "True"}
-        ]
+        "hiddenInput" : [{ "name" : "k", "value" : "<^- msg('en') ^>"}, { "name" : "l", "value" : "<^- msg('eng') ^>"}, { "name" : "chk2", "value" : "True"}]
     }]
 } -%>
 <nav aria-label="<^- msg('Skip Links') ^>">
